--- a/org.dieschnittstelle.jee.esa.jpa.client/.project
+++ b/org.dieschnittstelle.jee.esa.jpa.client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.dieschnittstelle.jee.esa.jpa.client</name>
+	<name>org.dieschnittstelle.jee.esa.jpa.client.semester</name>
 	<comment></comment>
 	<projects>
 	</projects>
