--- a/org.dieschnittstelle.jee.esa.semester/.classpath
+++ b/org.dieschnittstelle.jee.esa.semester/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="ejbModule"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar">
 		<attributes>
