remove even more files

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@
 # gwt caches and compiled units #
 war/gwt_bree/
 gwt-unitCache/
-
+org.dieschnittstelle.jee.esa.gae/war/WEB-INF/classes
+org.dieschnittstelle.jee.esa.gae/war/WEB-INF/deploy
+org.dieschnittstelle.jee.esa.gae/war/WEB-INF/lib
+org.dieschnittstelle.jee.esa.gae/.gwt
+org.dieschnittstelle.jee.esa.gae/.settings
