--- a/org.dieschnittstelle.jee.esa.android.cns/bin/AndroidManifest.xml
+++ b/org.dieschnittstelle.jee.esa.android.cns/bin/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -35,7 +36,7 @@
         </activity>
         
         <receiver
-            android:name="org.dieschnittstelle.jee.esa.android.cns.gcm.CnsBroadcastReceiver"
+            android:name="org.dieschnittstelle.jee.esa.android.cns.CnsBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
