--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ org.dieschnittstelle.jee.esa.gae/war/WEB-INF/classes
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/deploy
 org.dieschnittstelle.jee.esa.gae/.gwt
 org.dieschnittstelle.jee.esa.gae/.settings
-org.dieschnittstelle.jee.esa.gae/war/DieSchnittstelle/
-*/bin/
-*/gen/
+org.dieschnittstelle.jee.esa.gae/war/DieSchnittstelle
+org.dieschnittstelle.jee.esa.android.cns/bin
+*/gen
