--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.class
 *~
 */.classpath
+*/.project*
+*/.project.properties
 *.symbolMap
 
 # gwt caches and compiled units #
@@ -8,6 +10,7 @@ war/gwt_bree/
 gwt-unitCache/
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/classes
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/deploy
+org.dieschnittstelle.jee.esa.gae/war/WEB-INF/lib
 org.dieschnittstelle.jee.esa.gae/.gwt
 org.dieschnittstelle.jee.esa.gae/.settings
 org.dieschnittstelle.jee.esa.gae/war/DieSchnittstelle
