--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 *.class
 *~
 */.classpath
-*/.project*
-*/.project.properties
+*/.project
 *.symbolMap
 
 # gwt caches and compiled units #
@@ -16,3 +15,4 @@ org.dieschnittstelle.jee.esa.gae/.settings
 org.dieschnittstelle.jee.esa.gae/war/DieSchnittstelle
 org.dieschnittstelle.jee.esa.android/bin
 */gen
+org.dieschnittstelle.jee.esa.android/project.properties
