--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ gwt-unitCache/
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/classes
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/deploy
 org.dieschnittstelle.jee.esa.gae/war/WEB-INF/lib
+org.dieschnittstelle.jee.esa.gae/war/WEB-INF/appengine-generated/
 org.dieschnittstelle.jee.esa.gae/.gwt
 org.dieschnittstelle.jee.esa.gae/.settings
 org.dieschnittstelle.jee.esa.gae/war/DieSchnittstelle
